syntax = "proto3";
package lh_proto;

option go_package = ".;model";
option java_multiple_files = true;
option java_package = "io.littlehorse.common.proto";

enum LHStatusPb {
    STARTING = 0;
    RUNNING = 1;
    COMPLETED = 2;
    HALTING = 3;
    HALTED = 4;
    ERROR = 5;
}

enum VariableTypePb {
    JSON_OBJ = 0;
    JSON_ARR = 1;
    DOUBLE = 2;
    BOOL = 3;
    STR = 4;
    INT = 5;
    BYTES = 6;
}

message VariableValuePb {
    VariableTypePb type = 1;
    optional string json_obj = 2;
    optional string json_arr = 3;
    optional double double = 4;
    optional bool bool = 5;
    optional string str = 6;
    optional int32 int = 7;
    optional bytes bytes = 8;
}

enum TaskResultCodePb {
    SUCCESS = 0;
    TIMEOUT = 1;
    TASK_FAILURE = 2;
}
